# astrometrics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.MD  astro.patch  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  sample_data.csv  setup_database.sh  start
.github/workflows/: ci.yml  version-release.yml
astrometrics/: asgi.py  local_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
cms/: admin.py  block_registry.py  context_processors.py  forms.py  manager_urls.py  manager_views.py  models.py  translation.py  urls.py  views.py
cms/fixtures/: test_pages.json  test_posts.json
cms/migrations/: 0001_initial.py  0002_post.py  0003_remove_post_cms_post_publish_c185c9_idx_and_more.py  0004_page_body_de_page_meta_description_de_page_title_de_and_more.py  0005_landingpagesettings.py  0006_seed_landing_page_defaults.py  0007_add_post_byline.py  0007_footersettings_footerlink.py  0008_seed_footer_defaults.py  0009_headersettings_menuitem.py  0009_merge_0007_add_post_byline_0008_seed_footer_defaults.py  0010_add_preview_token.py  0010_seed_header_defaults.py  0011_menuitem_cta_text_menuitem_cta_text_de_and_more.py  0012_headersettings_show_mobile_sub_items.py  0013_merge_20260315_1602.py  0014_merge_0010_add_preview_token_0013_merge_20260315_1602.py  0015_add_page_hero_options.py  0017_ourmodelpagesettings.py  (+66 more)
docs/: block-system.md
journals/: __init__.py  admin.py  apps.py  forms.py  import_service.py  manager_urls.py  manager_views.py  models.py  public_views.py  urls.py  views.py
manager/: urls.py  views.py
portal/: admin.py  apps.py  forms.py  manager_urls.py  models.py  urls.py  views.py
(+215 files in other folders)
