[project]
name = "astrometrics"
version = "1.24.0"
description = "Astrometrics Django application for OJC"
readme = "README.MD"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "psycopg2-binary>=2.9.0",
    "django-redis>=5.3.0",
    "dj-database-url>=3.1.2",
    "bleach>=6.3.0",
    "django-modeltranslation>=0.19.17",
    "django-structlog>=8.0.0",
    "rich>=13.0.0",
    "structlog>=25.5.0",
    "django-tinymce>=4.1.0",
    "python-dotenv>=1.2.2",
    "Pillow>=11.0.0",
]

[tool.commitizen]
version = "1.24.0"
version_files = [
    "__version__.py",
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.ruff]
line-length = 79
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = ["E501"]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=3.2.0",
    "pre-commit>=4.5.1",
    "pyopenssl>=24.0.0",
    "ruff>=0.15.5",
    "werkzeug>=3.0.0",
]
